--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  height: 100%;
+}
+
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: rgb(0, 0, 0);
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 1em;
+  color: aliceblue;
+  padding-top: 100px;
+}
+
+.container {
+  min-height: 600px;
+  max-height: 600px;
+  min-width: 600px;
+  max-width: 600px;
+  background-color: rgb(0, 0, 0);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 1em;
+  border-radius: 5px;
+}
+
+.card {
+  background-color: rgb(187, 19, 229);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  transform: rotateY(180deg);
+  animation: 2s hideCard linear;
+  transition: transform 0.5s;
+}
+
+.row {
+  display: flex;
+  direction: row;
+  justify-content: space-evenly;
+  padding-top: 50px;
+}
+
+.stopwatch {
+  padding-left: 30px;
+}
+
+.numbers {
+  display: flex;
+  direction: row;
+  font-size: 100px;
+  color: aliceblue;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: rgb(230, 97, 9);
+  border-radius: 30px;
+}
+
+@keyframes hideCard {
+  0%,
+  70% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+.card img {
+  max-width: 80%;
+  max-height: 80%;
+  transform: scale(0);
+  animation: 2s hideImage linear;
+  transition: transform 0.5s;
+}
+
+@keyframes hideImage {
+  0%,
+  70% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+.card.active {
+  transform: rotateY(0);
+}
+
+.card.correct {
+  background-color: rgb(53, 235, 47);
+}
+
+.card.wrong {
+  background-color: rgb(255, 0, 55);
+}
+
+.card.active img {
+  transform: scale(1);
 }
